# TinyEmbree

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  THIRDPARTIES.txt  TinyEmbree.sln  make.ps1  make.sh
.github/workflows/: build.yml
Benchmark/: Benchmark.csproj  NearestNeighborBench.cs  Program.cs  RayTracing.cs
Core/: CMakeLists.txt  api.h  cbench.cpp  common.h  knn.cpp  knn.h  point_query.h  raytrace.cpp  raytrace.h  scene.cpp  scene.h
TinyEmbree/: Hit.cs  Imports.cs  Mesh.cs  NearestNeighborSearch.cs  Ray.cs  RayTracerStats.cs  Raytracer.cs  ShadowRay.cs  TinyEmbree.csproj  TinyEmbreeCore.cs  TriangleMesh.cs
TinyEmbree.Tests/: Mesh_Attributes.cs  NearestNeighbor_Simple.cs  Raytracer_Simple.cs  TinyEmbree.Tests.csproj
